tests/security/taintPropertyPassingObjectSettingValueLater/output.txt
ERROR: TaintedData - input.hack:15:10 - Detected tainted HTML tags